test/TestSuite/Syntax/Errors/too_many_bangs.tjp
project test "Test" "1.0" 2007-08-19 +2m 

task t "T" {
  start 2007-08-19
	task s "S" {
# MARK: error 7 too_many_bangs 
		depends !!!foo
	}
}

